# tatara-python

./: .pre-commit-config.yaml  README.md  example.py  fix_me.py  pyproject.toml  tatara-0.1.0-py3-none-any.whl
.github/workflows/: lint-python.yaml
docs/: mint.json  setup.mdx  test.mdx
docs/concepts/: datasets.mdx  evals.mdx  logging.mdx  spans.mdx  traces.mdx
docs/quickstarts/: evals.mdx  logging.mdx
src/tatara/: _background_queue_logger.py  _network_logger.py  client.py  example.py  provider_enum.py  tatara.py
tatara/: __init__.py  _background_queue_logger.py  _network_logger.py  _record_keys.py  client.py  client_state.py  dataset.py  example.py  tatara.py  tatara_types.py
tatara/evals/: __init__.py  eval.py  eval_types.py  id_generator.py  model_package.py  record.py  recorder.py  tatara_recorder.py
tatara/logging/: _background_queue_logger.py  _record_keys.py  logger.py
tatara/network/: _tatara_network_client.py  endpoints.py
tatara/tatara_logging/: _background_queue_logger.py  _record_keys.py  empty_span.py  empty_trace.py  logging_types.py  rating.py  span.py  span_impl.py  trace.py  trace_impl.py  utils.py
tatara/tests/: test_background_queue_logger.py  test_log_decorators.py
tests/: conftest.py  test_background_queue_logger.py  test_log_decorators.py
