[tool.poetry]
name = "tatara"
version = "0.1.0"
description = ""
authors = ["Tatara <support@tatara.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyright = "^1.1.345"
urllib3 = "^2.1.0"
wrapt = "^1.16.0"
openai = "^1.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ruff = "^0.1.13"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
