[tool.poetry]
name = "tatara"
version = "0.1.8"
description = ""
authors = ["Tatara <support@tatara.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
wrapt = "^1.16.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.345"
pytest = "^7.4.4"
ruff = "^0.1.13"
twine = "^4.0.2"
pytest-asyncio = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["tatara"]

[tool.ruff.lint]
ignore-init-module-imports = true